--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
         if(prediction[0].probability.toFixed(2)>0.8){
-           x = 1
+          var x = 1;
         }
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
