--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
-    console.log("x")
     // More API functions here:
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
@@ -55,19 +54,45 @@
         await predict();
         window.requestAnimationFrame(loop);
     }
-
+    var num =0
+    var available = "ok"
+    var state = "first"
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
         if(prediction[0].probability.toFixed(2)>0.8){
-          var x = 1;
+          num = 1
+          console.log("${num}");
+        }else if(prediction[1].probability.toFixed(2)>0.8){
+          num = 2
+          console.log("${num}");
+        }else if(prediction[2].probability.toFixed(2)>0.8){
+          num = 3
+          console.log("${num}");
+        }else if(prediction[3].probability.toFixed(2)>0.8){
+          num = 4
+          console.log("${num}");
+        }else if(prediction[4].probability.toFixed(2)>0.8){
+          num = 5
+          console.log("${num}");
+        }else if(prediction[5].probability.toFixed(2)>0.8){
+          num = 6
+          console.log("${num}");
+        }else if(prediction[6].probability.toFixed(2)>0.8){
+          num = 7
+          console.log("${num}");
+        }else if(prediction[7].probability.toFixed(2)>0.8){
+          num = 8
+          console.log("${num}");
+        }else if(prediction[8].probability.toFixed(2)>0.8){
+          num = 9
+          console.log("${num}");
+        }else if(prediction[9].probability.toFixed(2)>0.8){
+          num = 10
+          console.log("${num}");
         }
-        for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
-        }
+        
     }
 </script>
 </body>
