--- a/index.html
+++ b/index.html
@@ -63,34 +63,34 @@
         const prediction = await model.predict(webcam.canvas);
         if(prediction[0].probability.toFixed(2)>0.8){
           num = 1
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[1].probability.toFixed(2)>0.8){
           num = 2
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[2].probability.toFixed(2)>0.8){
           num = 3
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[3].probability.toFixed(2)>0.8){
           num = 4
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[4].probability.toFixed(2)>0.8){
           num = 5
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[5].probability.toFixed(2)>0.8){
           num = 6
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[6].probability.toFixed(2)>0.8){
           num = 7
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[7].probability.toFixed(2)>0.8){
           num = 8
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[8].probability.toFixed(2)>0.8){
           num = 9
-          console.log("${num}");
+          document.write("${num}");
         }else if(prediction[9].probability.toFixed(2)>0.8){
           num = 10
-          console.log("${num}");
+          document.write("${num}");
         }
         
     }
