--- a/index.html
+++ b/index.html
@@ -61,37 +61,47 @@
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
+        if (state=="first"){
         if(prediction[0].probability.toFixed(2)>0.8){
           num = 1
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[1].probability.toFixed(2)>0.8){
           num = 2
-          document.write("${num}");
-        }else if(prediction[2].probability.toFixed(2)>0.8){
+          document.write(num);
+          state = "second"bility.toFixed(2)>0.8){
           num = 3
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[3].probability.toFixed(2)>0.8){
           num = 4
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[4].probability.toFixed(2)>0.8){
           num = 5
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[5].probability.toFixed(2)>0.8){
           num = 6
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[6].probability.toFixed(2)>0.8){
           num = 7
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[7].probability.toFixed(2)>0.8){
           num = 8
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[8].probability.toFixed(2)>0.8){
           num = 9
-          document.write("${num}");
+          document.write(num);
+          state = "second"
         }else if(prediction[9].probability.toFixed(2)>0.8){
           num = 10
-          document.write("${num}");
-        }
+          document.write(num);
+          state = "second"
+        }}
         
     }
 </script>
