--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         }else if(prediction[1].probability.toFixed(2)>0.8){
           num = 2
           document.write(num);
-          state = "second"bility.toFixed(2)>0.8){
+          state = "second"
+         else if(prediction[2].probabilitybility.toFixed(2)>0.8){
           num = 3
           document.write(num);
           state = "second"
