--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           num = 2
           document.write(num);
           state = "second"
-         else if(prediction[2].probability.toFixed(2)>0.8){
+        }else if(prediction[2].probability.toFixed(2)>0.8){
           num = 3
           document.write(num);
           state = "second"
