--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ function OnButtonClick(){
         }}
     if (state=="second"){
         document.write(num);
-        <input type="button" value="reset" onclick="OnButtonClick();"/>
+        <input type="button" value="reset" onclick="OnButtonClick();"/><br/>
+    <br/>
 
 
     
