--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ function OnButtonClick(){
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
-<p id = "realtime_value_area"></p>
+<div id="realtime_value_area"></div>    
+//<p id = "realtime_value_area"></p>
     // More API functions here:
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
