--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ function show_value(value){
 document.getElementById("realtime_value_area").innerHTML = value;
 }
 function change_state(){
-    if (state==){
+    if (state=="first"){
 state = "second"}
     else if(state=="second"){
     state = "sum"
